[gd_scene load_steps=4 format=2]

[ext_resource path="res://common/world/player/player.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 26.6054

[sub_resource type="CircleShape2D" id=2]
radius = 32.4149

[node name="Player" type="KinematicBody2D" groups=["players"]]
collision_mask = 2
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource( 2 )

[node name="DeathCooldownTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Detect" to="." method="_on_Detect_area_entered"]
[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="timeout" from="DeathCooldownTimer" to="." method="_on_DeathCooldownTimer_timeout"]
